--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = "http://dev-yashaswee.github.io/blog/"
 languageCode = 'en-us'
 title = '∴ Therefore Blog'
 theme = "aether"
